# uni-data-science

./: .tool-versions  README.md  pyproject.toml  requirements.txt
app/: constants.py  download_data.py  overview.py  unite_dataset.py  utils.py
app/data_prep/: __init__.py  features.py  load.py  preprocessing.py
app/research/: independent_questions.py
app/research/model/: evaluation.py  insights.py
app/scripts/: 1_overview.py  2_unite_datasets.py  3_integrity_check.py  4_eda.py  5_ml_model.py  6_independent_rqs.py
